# HSG-12M

./: .gitignore  DatasetPlots.ipynb  NHSG12M.py  README.md  _generation_.ipynb  generate_poly_class.py  pyproject.toml  run_class_gen.sh  tutorial.ipynb
assets/: ParamTable.npz
bash_script/: conda_init_pyg.sh  run_1001_1223.pbs  run_1224-1379.pbs  run_class_gen.sh  run_test.pbs
plot/: DatasetPlots.ipynb
poly_class_dataset/: ParamTable_demo.npz
scripts/: benchmark.py  benchmark_0.py  benchmark_1.py  ddp_debug.py  init_env.sh  test.py
src/hsg/: __init__.py  callback.py  generation.py  gnn_baselines.py  pyg.py  sampler.py  training.py
